[tool.poetry]
name = "obsidian-vault"
version = "0.1.0"
description = "A paranoid-grade, multi-platform secure backup tool with quantum-resistant architecture."
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "obsidian", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
# Cryptography Core
pycryptodomex = "^3.19.0"
argon2-cffi = "^23.1.0"
# Google Drive API
google-api-python-client = "^2.108.0"
google-auth-httplib2 = "^0.1.1"
google-auth-oauthlib = "^1.1.0"
# CLI & Config
typer = {extras = ["all"], version = "^0.9.0"}
PyYAML = "^6.0.1"
# System API (Windows)
pywin32 = {version = "^306", markers = "sys_platform == 'win32'"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
hypothesis = "^6.91.0"
ruff = "^0.1.6"
black = "^23.11.0"
mypy = "^1.7.1"
mkdocs-material = "^9.4.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.ruff]
select = ["E", "F", "B", "S"]
ignore = []
line-length = 88

[tool.mypy]
strict = true
ignore_missing_imports = true